# lark-skills

./: .gitignore  AGENTS.md  README.md  README.zh.md  pyproject.toml
docs/superpowers/plans/: 2026-04-10-markdown-larkdoc-sync.md  2026-04-11-lark-skills-packaging.md  task5-step5-schema-check-evidence.md
docs/superpowers/specs/: 2026-04-10-markdown-larkdoc-sync-design.md  2026-04-11-lark-skills-packaging-design.md
scripts/: create_sync_commit.py  extract_markdown_body.py  fetch_open_comments.py  find_last_sync_commit.py  resolve_all_comments.py  resolve_doc_key.py
skills/markdown-larkdoc-sync/: SKILL.md
skills/markdown-larkdoc-sync/agents/: openai.yaml
skills/markdown-larkdoc-sync/lib/: comments.py  doc_binding.py  frontmatter.py  git_sync.py  journal.py  jsonio.py  lark_cli.py  mermaid_addons.py
skills/markdown-larkdoc-sync/references/: frontmatter-subset.md  installation.md
src/markdown_larkdoc_sync/: comments.py  doc_binding.py  git_sync.py  journal.py  lark_cli.py  markdown_body.py
tests/: test_cli_smoke_contracts.py  test_comments.py  test_doc_binding.py  test_git_sync.py  test_journal.py  test_jsonio.py  test_lark_cli.py  test_markdown_body.py  test_skill_docs.py
tests/markdown-larkdoc-sync/: conftest.py  test_cli_smoke_contracts.py  test_comments.py  test_doc_binding.py  test_frontmatter_contract.py  test_git_sync.py  test_journal.py  test_jsonio.py  test_lark_cli.py  test_layout_contract.py  test_markdown_body.py  test_mermaid_addons.py  test_readme_contract.py  test_repo_boundary_contract.py
