[build-system]
requires = ['setuptools>=68']
build-backend = 'setuptools.build_meta'

[project]
name = 'markdown-larkdoc-sync'
version = '0.1.0'
requires-python = '>=3.11'
dependencies = []

[project.optional-dependencies]
dev = ['pytest>=8.0']

[tool.pytest.ini_options]
addopts = '-q'
testpaths = ['tests']
